# rustyip

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-podman.sh  build.ps1  build.rs  build.sh  buildpush.sh  setupdev.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: container-build.yml  docs.yml  release.yml
icon/: svg-import.sh
src/: client.rs  core.rs  main.rs  utils.rs
test/: e2e-integration.py  generate-test-certs.sh
