[package]
name = "RustyIP"
version = "1.6.0"
edition = "2024"

[dependencies]
rand = "0.9"
sha2 = "0.10.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "RustyIP"
path = "src/main.rs"
