[package]
name = "RustyIP"
version = "1.6.0"
edition = "2024"

[dependencies]
rand = "0.10"
sha2 = "0.11.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"

[[bin]]
name = "RustyIP"
path = "src/main.rs"

[features]
default = ["embed-config"]
embed-config = []
